--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,8 @@
   <%= link_to 'RecipeApp', users_path, class:'logo' %>
     <section class='controls'>
       <% if user_signed_in?%>
+      <%= link_to 'FoodList',user_foods_path(current_user), class: 'navlinks'%>
+      <%= link_to 'AddFood',new_user_food_path(current_user), class: 'navlinks'%>
       <%= link_to 'Edit registration', edit_user_registration_path , class: 'navlinks'%>
       <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'navlinks'%>
       <% else %>
