--- a/app/views/recipes/add_ingredient.html.erb
+++ b/app/views/recipes/add_ingredient.html.erb
@@ -4,6 +4,6 @@
   </div>
 
   <div id="add-ingredient-form">
-    <p>Form goes here ...</p>
+    <%= render 'add_ingredient_form' %>
   </div>
 </div>
