--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,12 +1,12 @@
 <div>
-  <%= form_with model: [@user,@food], class:'form', url: user_foods_path(user_id: params[:user_id]), method: :post do |form| %> 
+  <%= form_with model: [@user,@food], class:'form', url: foods_path(user_id: params[:user_id]), method: :post do |form| %> 
 
-    <%= form.label :name, class: 'post_label' %> </br>
-    <%= form.text_field :name, required: true, class:'post_title' , placeholder: 'Enter post title' %> </br>
+    <%= form.label :food, class: 'post_label' %> </br>
+    <%= form.text_field :name, required: true, class:'post_title' , placeholder: 'e.g chicken' %> </br>
     <%= form.label :measurement_unit, class: 'post_label' %> </br>
-    <%= form.text_field :measurement_unit, required: true, class:'post_text', placeholder: 'Enter blog post' %> </br>
-    <%= form.label :price, class: 'post_label' %> </br>
-    <%= form.text_field :price, required: true, class:'post_text', placeholder: 'Enter blog post' %> </br>
+    <%= form.text_field :measurement_unit, required: true, class:'post_text', placeholder: 'kilogram' %> </br>
+    <%= form.label :unit_price, class: 'post_label' %> </br>
+    <%= form.text_field :price, required: true, class:'post_text', placeholder: '100' %> </br>
     <%= form.label :quantity, class: 'post_label' %> </br>
     <%= form.number_field :quantity, required: true, class:'post_text', placeholder: 'Enter blog post' %> </br>
     </br>
