--- a/app/views/recipes/_add_ingredient_form.html.erb
+++ b/app/views/recipes/_add_ingredient_form.html.erb
@@ -9,6 +9,7 @@
     <%= f.submit 'Add Ingredients', class: 'btn btn-primary' %>
   </div>
 <% end %>
+ <%= link_to 'Back to Recipe', recipe_path(@recipe), class: 'btn btn-primary mt-4' %>
 
 <script>
   function removeEmptyValues() {
