--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,7 @@
 <h1>My Recipes</h1>
 <div class="recipe-container flex-col">
-<ul>
+<%= link_to 'Create new Recipe', new_recipe_path(@recipe), class: 'btn btn-primary mt-4 custom-btn' %>
+<ul class="flex-col">
   <% @recipes.each do |recipe| %>
     <div class="recipe-card">
         <div>
