--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,8 +3,8 @@
   <%= link_to 'RecipeApp', user_session_path, class:'logo' %>
     <section class='controls'>
       <% if user_signed_in?%>
-      <%= link_to 'Foods',user_foods_path(current_user), class: 'navlinks'%>
-      <%= link_to 'AddFood',new_user_food_path(current_user), class: 'navlinks'%>
+      <%= link_to 'Foods', foods_path, class: 'navlinks'%>
+      <%= link_to 'AddFood', new_food_path, class: 'navlinks'%>
       <%= link_to 'Recipes', recipes_path, class: 'navlinks'%>
       <%= link_to "Public Recipes", public_recipes_recipes_path, class: 'navlinks' %>
       <%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete }, class: "navlinks" %>
