--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,3 +1,7 @@
+
+
+<%= link_to 'AddFood', new_food_path, class: 'btn btn-primary mt-4 add-btn' %>
+<ul class="flex-col">
 <table class="table table-bordered">
 <thead>
 <tr>
